# bloomberg

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
blpapi/: Cargo.toml
blpapi-derive/: Cargo.toml
blpapi-derive/src/: lib.rs
blpapi-sys/: Cargo.toml  build.rs  wrapper.h
blpapi-sys/src/: lib.rs
blpapi/src/: correlation_id.rs  datetime.rs  element.rs  event.rs  message.rs  message_iterator.rs  name.rs  ref_data.rs  request.rs  service.rs  session.rs  session_options.rs
src/: bindings.rs  build.rs  correlation_id.rs  datetime.rs  element.rs  errors.rs  event.rs  lib.rs  message.rs  message_iterator.rs  name.rs  request.rs  service.rs  session.rs  session_options.rs
